src/containers/App.css
/* APP ============================================ */

* {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: optimizeLegibility;
    -moz-osx-font-smoothing: grayscale;
}



@font-face {
    font-family: "haptik";
    src: url("/fonts/GT-Haptik-Regular.woff2") format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "haptik";
    src: url("/fonts/GT-Haptik-Regular-Oblique.woff2") format('woff2');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: "haptik";
    src: url("/fonts/GT-Haptik-bold.woff2") format('woff2');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "haptik";
    src: url("/fonts/GT-Haptik-Regular-Oblique.woff2") format('woff2');
    font-weight: bold;
    font-style: italic;
}

:root {
    --headline: 255,  255, 255;

    --text: 255,  255, 255;
   
    --textFilter: 14, 140, 133;
    --filter: 255,  255, 255;
    --background: 14, 140, 133;
    --font: "haptik", monospace
}

body {
    background-color: rgb(var(--background));
    color: rgba(var(--text),0.93);
    font-family: var(--font);
    letter-spacing: 0.03em;
    font-size: 16px;
}

.wrapper {
    padding: 2em 1em 1em 1em;
    min-height: calc(100vh - 1.5em);
    /* font-family: "Times New Roman"; */
}

.disclaimer {
    line-height: 1.5em;
    overflow: hidden;
    text-align: center;
    font-size: 0.8em;
}

.disclaimer span {
    line-height: 1em;
}

@media only screen and (min-width: 768px) {
    .wrapper {
        padding: 2em 1em 1em 1em;
    }

    body {
        font-size: 22px;
    }
}

@media only screen and (min-width: 768px) {
    .wrapper {
        width: 680px;
        margin: 0 auto;
    }
}

.noscroll {
    overflow: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--font);
    font-weight: bold;
    padding: 0;
    margin: 0.1em 0;
    left: 0.2em;
    color: rgb(var(--headline));
    letter-spacing: 0.0em;
}

h1 {
    font-size: 1.1em;
    /* font-family: "Times New Roman"; */
    /* font-style: italic; */
}

.center {
    text-align: center;
}

h2 {
    font-size: 1.1em;
    line-height: 1.2em;
}

h2.dashed-underline {
    padding-bottom: 0.2em;
    line-height: 1.2em;
}

.app-name {}

.small {
    font-size: 0.8em;
    line-height: 1.2em;
}

.intro {
    padding-bottom: 1em;
}

.main {}

img {
    width: 100%;
}

.line {
    display: inline-block;
    white-space: nowrap;
}

.underline {
    text-decoration: underline;
}

.dashed-underline {
    border-bottom: 0.1em dashed rgba(var(--filter), 0.8);
}

.gif {
    width: 100%;
    height: 0;
    padding-bottom: 66%;
    position: relative;
}

.gif iframe {
    position: absolute;
}

.button {
    display: block;
    font-style: italic;
    width: 100%;
    text-align: center;
    padding: .5em;
}

.button:hover {
    cursor: pointer;
}

.button.disabled {
    color: #555;
    cursor: default;
}

/* FEED ============================================ */

/* FILTER ============================================ */

.side {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    display: none;
    align-items: center;
    padding-left: 1em;
}

@media only screen and (min-width: 768px) {
    .side {
        display: flex;
    }
}

a,
a:hover,
a:visited,
a:active {
    color: rgba(var(--filter), 0.8);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.filter {
    text-decoration: none;
    font-style: italic;
    display: inline-block;
}

.filter a {
    color: rgb(var(--textFilter));
}

.filter a:hover {
    text-decoration: underline;
}


.filter-list .filter {
    background: rgba(var(--filter), 0.8);
    width: fit-content;
}

.filter-toggle .filter a {
    color: rgba(var(--filter), 0.8);

}


.filter-list .filter.selected {
    /* font-weight: bold; */
    text-decoration: none;
    background: rgba(var(--text),0.8);
}

.filter-list.block .filter.selected a:after {
    /* content: "𝕏"; */
    content: "\\";
    font-style: normal;
    padding-left: 1em;
    /* font-size: 0.7em; */
    /* line-height: 0.7em; */
    display: inline-block;
}

.filter.selected a:after:hover {
    text-decoration: none;
}

.filter-list {
    /* vertical-align: middle; */
    list-style: none;
    margin: 0;
    padding: 0;
    font-size: 0.8em;
    line-height: 0.8em;
}

.filter-list.pre-select {
    font-size: 1.0em;
    line-height: inherit;
}

.filter-list.inline {
    display: inline-block;
    line-height: 1.2em;
}

.filter-list.block .filter {
    padding: 0.3em 0.4em;
    margin-bottom: 0.4em;
    display: block;
}

.filter-list.inline .filter {
    padding: 0em 0.2em;
    margin-right: 0.4em;
}

.filter-list.preselect .filter {
    padding: 0.05em 0.2em;

}

.filter-toggle {
    padding-top: 1em;
    display: inline-block;
}

/* QUESTION ============================================ */

.question-title.en {
    font-style: italic;
}

.question.list-item {
    margin: 0 0 1.5em 0;
}

.question h2::before {
    font-size: 0.8em;
    line-height: 0.8em;
    padding-right: 0.5em;
    display: inline-block;
}

.question h2:hover::before {
    text-decoration: none !important;
}

.question.pinned h2::before {
    content: "📌 "
}

.question.schedule h2::before {
    content: "🗒 "
}

.question.pinned:not(.has-answers) h2::before {
    content: "📌 ";
}

.question:not(.has-answers) h2 {
    font-size: 0.9em;
    text-transform: uppercase;
    font-weight: bold;
}

.question:not(.has-answers) h2::before {
    font-size: 1em;
}

@keyframes fade-in-tiny {
    0% {
        transform: translateY( 2vw);
        opacity: 0;
    }
    100% {
        transform: translateY( 0vw);
        opacity: 1;
    }
}

@media only screen and (min-width: 768px) {
    .question.list-item {
        margin: 0 0 2em 0;
        animation: fade-in-tiny 0.8s;
    }
    .question.list-item.has-answers:hover h2 {
        text-decoration: underline;
        cursor: pointer;
    }
}

.question.full {
    min-height: 100%;
    background-color: rgb(var(--background));
}

.question.full h2 {
    margin-bottom: 2em;
}

.question .button {
    width: 100%;
    text-align: center;
    padding: .5em;
}

/* ANSWER ============================================ */

@media only screen and (min-width: 768px) {
    .answer-list.vertical {
        display: flex;
        justify-content: space-between;
    }
    .answer-list.vertical .answer {
        margin-right: 1.5em;
    }
    .answer-list.vertical .answer:last-child {
        margin-right: 0em;
    }
}

.answer-date {
    font-style: italic;
    font-size: 0.8em;
    display: block;
}

.answer .answer-date {
    margin-top: 0.5em;
}

.answer {
    margin-bottom: 2em;
}

.answer p {
    margin: 0 0 1em 0;
    line-height: 1.3em;
}

.answer p:last-child {
    margin: 0;
}

/* answer schedule type */

.schedule .answer {
    flex: 1;
    margin-bottom: 4em;
}

/* new styling */

.answer blockquote {
    color: rgba(var(--filter), 0.8);
    margin: 1em 0;
}

.answer blockquote p {
    font-size: .8em;
}

.answer blockquote p a {
    text-decoration: underline;
}

.answer blockquote:last-child {
    margin-bottom: .5em;
}

/* deprecated old styling */

.answer code {
    color: rgba(var(--filter), 0.8);
    font-size: .8em;
    line-height: .8em;
    font-family: var(--font);
    display: inline;
}

.answer pre:last-child {
    margin-bottom: 0;
}

.answer h4 em, .schedule .answer h3 em {
    font-weight: normal;
    font-size: inherit;
    
}

.schedule .answer em {
    
    color: rgba(var(--filter), 0.8);
    
}

.answer h3 {
    color: rgb(var(--headline));
    text-transform: uppercase;
    font-size: 1.1em;
    line-height: 1.2em;
    text-decoration: underline;
}

.answer h4 {
    color: rgb(var(--headline));
    font-size: 1em;
    line-height: inherit;
    font-weight: bold;
}

/* INPUT ============================================ */

.input-placeholder {
    padding: 0.5em 1em;
    border-color: rgba(var(--filter), 0.8);
    border-style: dashed;
    border-width: 0.1em;
    border-left-width: 0;
    border-right-width: 0;

    margin: 0 -1em 1.5em -1em;
    color: rgba(var(--text), 0.93);
}

.input-placeholder.thanks {
    color: rgba(var(--text), 0.93);
    border-color: white;
}

.input-placeholder:hover {
    cursor: pointer;
}

.input-placeholder:hover p {
    text-decoration: underline;
}

@media only screen and (min-width: 768px) {
    .input-placeholder {
        border-left-width: 0.1em;
        border-right-width: 0.1em;
    }
}

.input-placeholder h2 {
    margin-bottom: 0.2em;
    color: inherit;
}

.input-placeholder p {
    font-size: 0.8em;
    margin: 0px;
    font-style: italic;
    color: rgba(var(--filter), 0.8);
}

.fullscreen {
    width: 100vw;
    min-height: 100vh;
}

.input {
    /* background-color: rgba(var(--filter), 1); */
    /* color: #ddd; */
    z-index: 100;
}

/* .input .dashed-underline {
    border-color: rgb(var(--text))
}

.input .button {
    color: rgb(var(--text))

} */

.fade-in {
    animation: 0.4s fade-in;
    animation-fill-mode: both;
}

@keyframes fade-in {
    0% {
        opacity: 0;
        transform: translateY( -4vw);
    }
    100% {
        opacity: 1;
        transform: translateY( 0vw);
    }
}

.input-area {
    width: 100%;
    border: none;
    outline: none;
    background: inherit;
    font-size: 1.3em;
    color: rgba(var(--text),0.93);
    margin: 2em 0;
    font-family: var(--font);
}

.button-send {}

/* PRESELECT ========================================= */

.preselect {
    background: #000;
    color: rgb(var(--background));
}

.preselect a {
    color: rgb(var(--background));
    font-size: 8em;
}

.change-track-link {
    display: block;
    padding-top: 20px;
}

.change-track-link:hover {
    text-decoration: underline;
}

/* BUTTON ============================================ */

.close {
    text-decoration: underline;
}

/* ANIMATION ============================================ */

.questionmark-animation {
    position: absolute;
    top: 0;
    perspective: 500px;
    perspective-origin: 50% 50%;
}

.questionmark-animation span {
    display: none;
    position: absolute;
    color: rgb(var(--background));
    -webkit-text-stroke: 0.15em rgb(var(--text));
}

.questionmark-animation.play span {
    display: block;
    animation: 3s raise ease-out calc(var(--d) * 2s);
    animation-fill-mode: both;
}

.questionmark-animation span:after {
    /* font-family: 'Times New Roman', Times, serif; */
    content: "?";
    font-size: 20em;
    display: block;
    transform: translate3d(-50%, -50%, 0);
}

@keyframes raise {
    0% {
        transform: translate3d(50vw, 300vh, calc(var(--z) * -600px));
        opacity: 1;
    }
    80% {
        opacity: 0.8;
    }
    100% {
        opacity: 0;
        transform: translate3d(calc( 50vw + var(--x) * 100vw), -20vh, calc(var(--z) * -600px));
    }
}

/* cursor fix */

.liKdQs .typed-cursor {
    opacity: 1;
    animation: blink .7s infinite;
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

